# RP2040matrix-v2

./: .gitignore  CMakeLists.txt  LEDmx.c  RP2040matrixDemo.c  Readme.md  flash.cmd  flash_BCM.cmd  flash_BCM_128.cmd  gol.c  hub75.c  hub75_BCM.c  hub75_old.c  mountains_128x64_rgb565.h  pong.c  ps_hub75_128.pio  ps_hub75_128_BCM.pio  ps_hub75_64.pio  ps_hub75_64_BCM.pio  ps_hub75_OLD.pio
Docs/: BCM.xlsx
built/: RP2040matrix.elf  RP2040matrix.hex  RP2040matrix.uf2  RP2040matrix_128_BCM.elf  RP2040matrix_128_BCM.hex  RP2040matrix_128_BCM.uf2  RP2040matrix_64_BCM.elf  RP2040matrix_64_BCM.hex  RP2040matrix_64_BCM.uf2
include/: FreeRTOSConfig.h  LEDmx.h  hub75.h  hub75_OLD.h  ps_debug.h
